fix(tooltip): avoid early wrapping of label (#102)

--- a/scss/elements/tooltip/index.scss
+++ b/scss/elements/tooltip/index.scss
@@ -36,5 +36,7 @@ $-default-config: (
 
     background-color: theme.$background-inverse;
     color: theme.$text-inverse;
+    inline-size: max-content;
+    max-inline-size: 20rem;
   }
 }
